--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <input type="search" placeholder="Search" id="search">
       </form>
     </div>
-    <div class="list"></div>
+    <div id="list">
+      <ul></ul>
+    </div>
   </div>
   
 <script src="script.js"></script>
